005-calculator/styles.css
:root {
    --main-color: hsl(240deg 10% 90%);
    --main-background-color: hsl(240deg 10% 20%);
    --display-background-color: hsl(240deg 10% 30%);
    --display-color: hsl(240deg 10% 80%);
    --operator-hue: 180deg;

    --num-rows: 5.5;
    --num-cols: 4;
    --basis-qty: max(var(--num-rows), var(--num-cols));
    --basis-dimension: min(100vh, 100vw);
    --basis-size: calc(var(--basis-dimension) / var(--basis-qty));
    --basis-size-adjusted: calc(0.90 * var(--basis-size));

    --main-size-basis: max(40px, var(--basis-size-adjusted));
    --button-size-basis: calc(0.9 * var(--main-size-basis));
    --button-gap-size: calc(0.1 * var(--main-size-basis));
    --button-font-size: calc(0.5 * var(--button-size-basis));
    --display-height: calc(1.5 * var(--button-size-basis));

    --button-border: 2px solid var(--main-color);
    --button-border-radius: 5px;
}

/* shared classes */
.flex,
.flex-column {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-column {
    flex-direction: column;
}

/* main layout */
body {
    color: var(--main-color);
    background-color: var(--main-background-color);
    font-family: sans-serif;
    margin: 0;
    height: 100vh;
    min-height: 200px;
}

#root {
    gap: var(--button-gap-size);
}

#display,
.button-row {
    flex: 1 0 auto;
    width: calc(var(--num-cols) * var(--main-size-basis));
    gap: var(--button-gap-size);
}

.button-row {
    user-select: none;
}

#display,
.button {
    font-size: var(--button-font-size);
    font-weight: 300;
    border-radius: var(--button-border-radius);
}

#display {
    align-items: flex-end;
    color: var(--display-color);
    background-color: var(--display-background-color);
}

.display-text {
    font-family: "Kode Mono", monospace;
    padding: 0 var(--button-gap-size);
}

.button {
    flex: 1 1 var(--button-size-basis);
    height: var(--button-size-basis);
}

.button.numeric {
    border: 1px solid var(--display-background-color);
}

.button.numeric:hover {
    background-color: var(--display-background-color);
}

.button.operator {
    background-color: hsl(var(--operator-hue) 100% 50% / 0.1)
}

.button.operator:hover {
    background-color: hsl(var(--operator-hue) 100% 50% / 0.2);
}

